fix: switch scrollbar thickness

--- a/assets/styles/framework/ui.less
+++ b/assets/styles/framework/ui.less
@@ -48,7 +48,7 @@
 }
 
 // Scrollbar
-@scroll-bar: 6px;
+@scroll-bar: 5px;
 
 // Borders
 @light-border: 1px solid rgba(105, 128, 167, 0.05);
